[gd_scene load_steps=7 format=3 uid="uid://3bt7aacxyvac"]

[ext_resource type="Script" path="res://scenes/ui/player_ui.gd" id="1_6fff4"]

[sub_resource type="LabelSettings" id="LabelSettings_01jku"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_krlaa"]
font_size = 60

[sub_resource type="Gradient" id="Gradient_bjmqj"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_vky8n"]
gradient = SubResource("Gradient_bjmqj")

[sub_resource type="LabelSettings" id="LabelSettings_nhnya"]
font_size = 38

[node name="Player UI" type="CanvasLayer"]
script = ExtResource("1_6fff4")

[node name="LivesDisplay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 50.0
offset_top = 44.0
offset_right = 129.0
offset_bottom = 83.0

[node name="HBoxContainer" type="HBoxContainer" parent="LivesDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LivesCounter" type="Label" parent="LivesDisplay/HBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_01jku")

[node name="GameOverDisplay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverDisplay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -108.0
offset_right = 175.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="GameOverText" type="Label" parent="GameOverDisplay/VBoxContainer"]
layout_mode = 2
text = "Game Over!"
label_settings = SubResource("LabelSettings_krlaa")

[node name="RetryBtn" type="TextureButton" parent="GameOverDisplay/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
mouse_default_cursor_shape = 2
texture_normal = SubResource("GradientTexture1D_vky8n")
stretch_mode = 0

[node name="Text" type="Label" parent="GameOverDisplay/VBoxContainer/RetryBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -85.0
offset_right = 85.0
grow_horizontal = 2
grow_vertical = 2
text = "Retry?"
label_settings = SubResource("LabelSettings_nhnya")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="GameOverDisplay/VBoxContainer/RetryBtn" to="." method="_on_retry_btn_pressed"]
